clue (20011231) unstable; urgency=low

  * 

 -- Peter Van Eynde <pvaneynd@debian.org>  Mon, 31 Dec 2001 15:47:13 +0100

clue (20011230) unstable; urgency=high

  * Fixed declarations, now compiles with safe core!
  * Demo's now work and are c-l-c'ed!
  * Now native package. 

 -- Peter Van Eynde <pvaneynd@debian.org>  Sun, 30 Dec 2001 10:43:22 +0100

clue (20010602-4) unstable; urgency=high

  * Changed architecture so it can get into testing, I hope...

 -- Peter Van Eynde <pvaneynd@debian.org>  Sun,  9 Dec 2001 22:25:05 +0100

clue (20010602-3) unstable; urgency=low

  * Shorted package descr.
    Closes: #109847

 -- Peter Van Eynde <pvaneynd@debian.org>  Tue, 28 Aug 2001 15:13:21 +0200

clue (20010602-2) unstable; urgency=low

  * Fixed upgrade bug: now should remove pictures and clio.
  * Rebuild for dpkg-dev bug. 

 -- Peter Van Eynde <pvaneynd@debian.org>  Tue,  3 Jul 2001 08:07:16 +0200

clue (20010602-1) unstable; urgency=low

  * Now with common-lisp-controller support
  * Patches from Fred Gilham <gilham@csl.sri.com>  

 -- Peter Van Eynde <pvaneynd@debian.org>  Sat,  2 Jun 2001 20:37:46 +0200

clue (19970309-7) unstable; urgency=low

  * new release of cmucl

 -- Peter Van Eynde <pvaneynd@debian.org>  Sun,  3 Sep 2000 00:27:18 +0200

clue (19970309-6) unstable; urgency=low

  * Went to FSH. 

 -- Peter Van Eynde <pvaneynd@debian.org>  Fri,  8 Oct 1999 07:42:11 +0200

clue (19970309-5) unstable; urgency=low

  * Fixed misspelling 

 -- Peter Van Eynde <pvaneynd@debian.org>  Tue,  2 Mar 1999 20:15:25 +0100

clue (19970309-4) unstable; urgency=low

  * Moved changelogs, fixes bugs #24492 and #24493.
  * Now based on dh-make
  * New cmucl release.

 -- Peter Van Eynde <pvaneynd@debian.org>  Wed, 15 Jul 1998 20:58:45 +0200

clue (19970309-3) unstable; urgency=low

  * New cmucl version. 

 -- Peter Van Eynde <pvaneynd@debian.org>  Tue, 30 Jun 1998 23:43:58 +0200

clue (19970309-2) unstable; urgency=low

  * fixed section tag
