@@ -4,6 +4,7 @@
 
 (mk:defsystem clio-examples
  :depends-on ( clue clio )
+ :source-extension "lisp"
  :source-pathname 
  #+common-lisp-controller "cl-library:clio;examples;"
  #-common-lisp-controller (translate-logical-pathname "clocc:src;gui;clue;clio;examples;")
