@@ -2,32 +2,6 @@
 
 (in-package :User)
 
-#+pcl
-(progn
-  (pushnew 'compile pcl::*defclass-times*)
-  (pushnew 'compile pcl::*defgeneric-times*))
-
-;; Ensure VALUES is a legal declaration
-#-cmu17
-(proclaim '(declaration values))
-
-#+cmu17 ;; Don't warn about botched values decls
-(setf c:*suppress-values-declaration* t)
-
-#+pcl ;; This is now in current sources
-(pushnew 'values pcl::*non-variable-declarations*)
-
-;; Ensure *features* knows about CLOS and PCL
-(when (find-package 'pcl)
-  (pushnew :pcl  *features*)
-  (pushnew :clos *features*)
-  (unless (find-package :clos)
-    (rename-package :pcl :pcl '(:clos))))
-
-;; Ensure *features* knows about the Common Lisp Error Handler
-(when (find-package 'conditions)
-  (pushnew :cleh *features*))
-
 ;;; handle PCL's precompile "feature"
 (defun hack-precom (path op &optional (pathname "precom"))
   (declare (type (member :compile :load :ignore) op))
@@ -48,7 +22,8 @@
     :source-pathname 
     #+common-lisp-controller "cl-library:clue;"
     #-common-lisp-controller (translate-logical-pathname "clocc:src;gui;clue;clue;")
-    :depends-on (:cmucl-clx)
+    :depends-on ( #+cmu :cmucl-clx #-cmu :clx)
+    :source-extension "lisp"
     :components
     ((:file "clue")                     ; Define packages
      (:module clue-precom-load
